fix: Missing overflow in profile banner

--- a/app/assets/stylesheets/elements/_profile.scss
+++ b/app/assets/stylesheets/elements/_profile.scss
@@ -195,11 +195,12 @@
   left: 0;
   top: 0;
   width: 280px;
-  height: 280px;
+  height: min(280px, 100%);
   background: lighten($bg-dark, 10%);
   filter: blur(50px);
   opacity: 0.2;
   z-index: 0;
+  overflow: hidden;
 
   img {
     display: block;
